# mango-query-rs

./: AGENTS.md  Cargo.toml  LICENSE  README.md
src/: builder.rs  lib.rs  memory.rs  models.rs
src/flavours/: dynamodb.rs  mod.rs  postgresql.rs  types.rs
tests/: builder_test.rs  dynamodb_test.rs  memory_test.rs  postgresql_test.rs
