[package]
name = "mango-query-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
regex = "1.10"
aws-sdk-dynamodb = { version = "1.0", optional = true }
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"], optional = true }

[features]
dynamodb = ["dep:aws-sdk-dynamodb", "dep:serde_dynamo"]
